2007-06-19  Eitan Isaacson  <eitan@ascender.com>

	* README: Bumped to 0.1.5.
	* configure.in: Bumped to 0.1.5.
	* debian/changelog: Bumped to 0.1.5.
	* src/lib/accerciser/__init__.py: Changed main class name.
	* src/lib/accerciser/accerciser.py: Changed main class name. 
	Moved global keypress listening to hotkey manager.
	* src/lib/accerciser/hotkey_manager.py: Moved global keypress
	listening to hotkey manager.

2007-06-17  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: Updated to 0.1.4.
	* src/lib/accerciser/main_window.py: Added shadow to treeview.
	* src/lib/accerciser/plugin/view.py: Fixed crash when no gconf
	settings are found.

2007-06-15  Eitan Isaacson  <eitan@ascender.com>

	* po/POTFILES.in: Removed glade, added new files.
	* src/Makefile.am: Removed glade file.
	* src/accerciser.glade: Removed glade file.
	* src/lib/accerciser/Makefile.am: Added prefs dialog, about dialog
	and main window files.
	* src/lib/accerciser/about_dialog.py: Replaced glade description.
	* src/lib/accerciser/accerciser.py: Refacotred out all main window 
	functionality.
	* src/lib/accerciser/accessible_treeview.py: Manage own action group.
	* src/lib/accerciser/bookmarks.py: Refactored, use UIManager and actions.
	* src/lib/accerciser/main_window.py: Replaced glade description.
	* src/lib/accerciser/prefs_dialog.py: Replaced glade description.

2007-06-05  Eitan Isaacson  <eitan@ascender.com>

	* src/accerciser.glade: Added bookmarks menu.
	* src/lib/accerciser/Makefile.am: Added bookmarks.py.
	* src/bookmarks.py: Added support for bookmarks.
	* src/lib/accerciser/accerciser.py: Added bookmark callbacks.
	* src/lib/accerciser/accessible_treeview.py: Fixed node selection bug.
	* src/lib/accerciser/hotkey_manager.py:
	* src/lib/accerciser/node.py: added tree_path attribute for more 
	accurate accessible paths.

2007-06-05  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accessible_treeview.py: Decouple children
	node loading (bug 441013).
